k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-db-argocd-kustomize-kyverno-grafana-loki-tempo-ingress
  namespace: davtrowebdb
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-db-argocd-kustomize-kyverno-grafana-loki-tempo
            port:
              number: 80
